[build-system]
build-backend = "flit_core.buildapi"
requires = [
  "flit-core>=3.2,<4",
]

[project]
name = "otp"
readme = { file = "readme.md", content-type = "text/markdown" }
keywords = [
  "2fa",
  "authenticator",
  "mfa",
  "otp",
  "totp",
]
license = { file = "LICENSE" }
authors = [
  { name = "Dobatymo", email = "Dobatymo@users.noreply.github.com" },
]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "description",
  "version",
]
dependencies = [
  "genutility[atomic,file]>=0.0.80",
  "platformdirs>=3",
  "pynacl>=1.4",
  "pyotp>=2.6",
  "rich>=13",
  "typing-extensions>=4",
]
optional-dependencies.qr = [
  "mss",
  "pillow>=10",
  "pyzbar",
]
urls.Homepage = "https://github.com/Dobatymo/otp-tool"
scripts.otp = "otp:main"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
lint.extend-select = [
  "B",
  "I",
]
lint.ignore = [
  "B011",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.bandit]
skips = [
  "B101",
]
